lld & hld changes